# cube_firmware

./: .gitattributes  .gitignore  README.md  cube_firmware.code-workspace
cube_lib/: CMakeLists.txt  generate_proto.sh
cube_lib/include/: controller.hpp  cube.hpp  errors.hpp  hardware.hpp  params.hpp  planner.hpp
cube_lib/include/common/: coordinate.hpp  errors.hpp  instruction_set.hpp  message.hpp
cube_lib/protocols/: cube.options  cube.pb.c  cube.pb.h  cube.proto
cube_lib/source/: controller.cpp  instr_comms.cpp  instr_move.cpp  planner.cpp
cube_lib/source/common/: coordinate.cpp  message.cpp  planner.cpp
docs/: error_ids.md  instruction_set.md  message_format.md  setup.md
firmware/: CMakeLists.txt  interrupts.c  main.c  openocd.cfg
firmware/cmake/: stm32_hal.cmake  stm32_toolchain.cmake
firmware/include/: config.hpp  core_xy.hpp  main.hpp  peripherals.hpp  serial_buffer.hpp  stepper_generator.hpp  stm32g4xx_hal_conf.h
firmware/include/drivers/: mcp23008.hpp  tmc2209.hpp
firmware/source/: communication.cpp  config.cpp  core_xy.cpp  cube_hw.cpp  gpio.cpp  interrupts.cpp  logging.cpp  main.cpp  movement.cpp  peripherals.cpp  stepper_generator.cpp
firmware/source/drivers/: mcp23008.cpp  tmc2209.cpp
firmware_backport/: CMakeLists.txt  armgcc.cmake
firmware_backport/sdk/: Cube_FW.mex
firmware_backport/sdk/board/: clock_config.c  peripherals.c  peripherals.h  pin_mux.c  pin_mux.h
firmware_backport/sdk/drivers/: fsl_i2c.h
firmware_backport/source/: config.hpp  main.cpp  reactor.cpp
firmware_backport/source/TMC429/: TMC429.cpp  TMC429.hpp
firmware_backport/source/mcp23008/: mcp23008.cpp  mcp23008.hpp
include/common/: coordinate.hpp  instruction_set.hpp
tests/: CMakeLists.txt  test_coordinate.cpp  test_planner.cpp
tools/ramp_visualizer/: CMakeLists.txt  main.cpp  visualize.py
tools/ramp_visualizer/mock/: mock.cpp  stm32g4xx_hal.h
